--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -19,6 +19,19 @@ services:
   - mysql:/var/lib/mysql
   - mysql_config:/etc/mysql
 
+ phpmyadmin:
+  image: phpmyadmin/phpmyadmin
+  container_name: pma
+  links:
+    - mysqldb
+  environment:
+    PMA_HOST: mysqldb
+    PMA_PORT: 3306
+    PMA_ARBITRARY: 1
+  restart: always
+  ports:
+    - 8081:80
+
 volumes:
   mysql:
   mysql_config:
